# ExamGrader

./: .dockerignore  .gitignore  Dockerfile  OPTIMIZATION.md  README.md  config.yaml  docker-compose.yml  docker-deploy.sh  get_window_coords.py  main.py  pyproject.toml  requirements.txt
exam_grader/: __init__.py  config.py  grader.py  screenshot.py  vllm_client.py
examples/: reference_answer.md  usage_example.py
src/grader/: __init__.py  cli.py  screenshot.py  vllm_client.py
tests/: test_exam_grader.py  test_prompt.py
